[project]
name = "observatoire-territorial"
version = "0.1.0"
description = ""
authors = [
    {name = "Isabel Palacio",email = "isabel6198@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.33.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
